tests/snapshots/run_wpt_conformance__onnx_pad_float32_4D_tensor_options_mode__reflection_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad float32 4D tensor options.mode='reflection'",
    "onnx",
    "PASS",
)
